--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "core-js": "^3.8.3",
+    "css-loader": "^6.7.1",
     "element-ui": "^2.15.8",
+    "file-loader": "^6.2.0",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem": "^0.3.0",
+    "style-loader": "^3.3.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
   },
